Code/syntax.output
State 31 conflicts: 1 reduce/reduce
State 50 conflicts: 1 reduce/reduce
State 114 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | error

    3 ExtDefList: ExtDef ExtDefList
    4           | ε

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | ε

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | error

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | error

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec
   26        | error

   27 ParamDec: Specifier VarDec
   28         | error

   29 CompSt: LC DefList StmtList RC
   30       | error

   31 StmtList: Stmt StmtList
   32         | ε

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | IF LP Exp RP error ELSE Stmt
   39     | WHILE LP Exp RP Stmt

   40 DefList: Def DefList
   41        | ε

   42 Def: Specifier DecList SEMI

   43 DecList: Dec
   44        | Dec COMMA DecList

   45 Dec: VarDec
   46    | VarDec ASSIGNOP Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | error

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 2 8 20 23 26 28 30 38 65
    INT <node> (258) 19 63
    FLOAT <node> (259) 64
    ID <node> (260) 15 17 18 21 22 58 59 61 62
    SEMI <node> (261) 5 6 33 35 42
    COMMA <node> (262) 10 24 44 66
    ASSIGNOP <node> (263) 46 47
    RELOP <node> (264) 50
    PLUS <node> (265) 51
    MINUS <node> (266) 52 56
    STAR <node> (267) 53
    DIV <node> (268) 54
    AND <node> (269) 48
    OR <node> (270) 49
    DOT <node> (271) 61
    NOT <node> (272) 57
    TYPE <node> (273) 11
    LP <node> (274) 21 22 36 37 38 39 55 58 59
    RP <node> (275) 21 22 36 37 38 39 55 58 59
    LB <node> (276) 19 60
    RB <node> (277) 19 60
    LC <node> (278) 13 29
    RC <node> (279) 13 29
    STRUCT <node> (280) 13 14
    RETURN <node> (281) 35
    IF <node> (282) 36 37 38
    ELSE <node> (283) 37 38
    WHILE <node> (284) 39
    UMINUS (285)
    LOWER_THAN_ELSE (286)


Nonterminals, with rules where they appear

    $accept (32)
        on left: 0
    Program <node> (33)
        on left: 1 2
        on right: 0
    ExtDefList <node> (34)
        on left: 3 4
        on right: 1 3
    ExtDef <node> (35)
        on left: 5 6 7 8
        on right: 3
    ExtDecList <node> (36)
        on left: 9 10
        on right: 5 10
    Specifier <node> (37)
        on left: 11 12
        on right: 5 6 7 8 27 42
    StructSpecifier <node> (38)
        on left: 13 14
        on right: 12
    OptTag <node> (39)
        on left: 15 16
        on right: 13
    Tag <node> (40)
        on left: 17
        on right: 14
    VarDec <node> (41)
        on left: 18 19 20
        on right: 9 10 19 27 45 46
    FunDec <node> (42)
        on left: 21 22 23
        on right: 7
    VarList <node> (43)
        on left: 24 25 26
        on right: 21 24
    ParamDec <node> (44)
        on left: 27 28
        on right: 24 25
    CompSt <node> (45)
        on left: 29 30
        on right: 7 34
    StmtList <node> (46)
        on left: 31 32
        on right: 29 31
    Stmt <node> (47)
        on left: 33 34 35 36 37 38 39
        on right: 31 36 37 38 39
    DefList <node> (48)
        on left: 40 41
        on right: 13 29 40
    Def <node> (49)
        on left: 42
        on right: 40
    DecList <node> (50)
        on left: 43 44
        on right: 42 44
    Dec <node> (51)
        on left: 45 46
        on right: 43 44
    Exp <node> (52)
        on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
        on right: 33 35 36 37 38 39 46 47 48 49 50 51 52 53 54 55 56 57 60 61 66 67
    Args <node> (53)
        on left: 66 67
        on right: 58 66


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 4 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    2 Program: error •

    $default  reduce using rule 2 (Program)


State 2

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT • OptTag LC DefList RC
   14                | STRUCT • Tag

    ID  shift, and go to state 9

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef • ExtDefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    5 ExtDef: Specifier • ExtDecList SEMI
    6       | Specifier • SEMI
    7       | Specifier • FunDec CompSt
    8       | Specifier • error

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 9

   15 OptTag: ID •
   17 Tag: ID •

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 10

   13 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 20


State 11

   14 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 14 (StructSpecifier)


State 12

    0 $accept: Program $end •

    $default  accept


State 13

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 14

    8 ExtDef: Specifier error •
   20 VarDec: error •
   23 FunDec: error •

    error     reduce using rule 23 (FunDec)
    SEMI      reduce using rule 20 (VarDec)
    COMMA     reduce using rule 20 (VarDec)
    LB        reduce using rule 20 (VarDec)
    LC        reduce using rule 23 (FunDec)
    $default  reduce using rule 8 (ExtDef)


State 15

   18 VarDec: ID •
   21 FunDec: ID • LP VarList RP
   22       | ID • LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


State 16

    6 ExtDef: Specifier SEMI •

    $default  reduce using rule 6 (ExtDef)


State 17

    5 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 22


State 18

    9 ExtDecList: VarDec •
   10           | VarDec • COMMA ExtDecList
   19 VarDec: VarDec • LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 9 (ExtDecList)


State 19

    7 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


State 20

   13 StructSpecifier: STRUCT OptTag LC • DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 29
    Def              go to state 30


State 21

   21 FunDec: ID LP • VarList RP
   22       | ID LP • RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    5 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 5 (ExtDef)


State 23

   10 ExtDecList: VarDec COMMA • ExtDecList

    error  shift, and go to state 36
    ID     shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 18


State 24

   19 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 39


State 25

   30 CompSt: error •

    $default  reduce using rule 30 (CompSt)


State 26

   29 CompSt: LC • DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 30


State 27

    7 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 7 (ExtDef)


State 28

   42 Def: Specifier • DecList SEMI

    error  shift, and go to state 36
    ID     shift, and go to state 37

    VarDec   go to state 41
    DecList  go to state 42
    Dec      go to state 43


State 29

   13 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 44


State 30

   40 DefList: Def • DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 8
    DefList          go to state 45
    Def              go to state 30


State 31

   26 VarList: error •
   28 ParamDec: error •

    COMMA     reduce using rule 28 (ParamDec)
    RP        reduce using rule 26 (VarList)
    RP        [reduce using rule 28 (ParamDec)]
    $default  reduce using rule 26 (VarList)


State 32

   22 FunDec: ID LP RP •

    $default  reduce using rule 22 (FunDec)


State 33

   27 ParamDec: Specifier • VarDec

    error  shift, and go to state 36
    ID     shift, and go to state 37

    VarDec  go to state 46


State 34

   21 FunDec: ID LP VarList • RP

    RP  shift, and go to state 47


State 35

   24 VarList: ParamDec • COMMA VarList
   25        | ParamDec •

    COMMA  shift, and go to state 48

    $default  reduce using rule 25 (VarList)


State 36

   20 VarDec: error •

    $default  reduce using rule 20 (VarDec)


State 37

   18 VarDec: ID •

    $default  reduce using rule 18 (VarDec)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 39

   19 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 49


State 40

   29 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 26
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


State 41

   19 VarDec: VarDec • LB INT RB
   45 Dec: VarDec •
   46    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 64
    LB        shift, and go to state 24

    $default  reduce using rule 45 (Dec)


State 42

   42 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 65


State 43

   43 DecList: Dec •
   44        | Dec • COMMA DecList

    COMMA  shift, and go to state 66

    $default  reduce using rule 43 (DecList)


State 44

   13 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 13 (StructSpecifier)


State 45

   40 DefList: Def DefList •

    $default  reduce using rule 40 (DefList)


State 46

   19 VarDec: VarDec • LB INT RB
   27 ParamDec: Specifier VarDec •

    LB  shift, and go to state 24

    $default  reduce using rule 27 (ParamDec)


State 47

   21 FunDec: ID LP VarList RP •

    $default  reduce using rule 21 (FunDec)


State 48

   24 VarList: ParamDec COMMA • VarList

    error   shift, and go to state 31
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 67
    ParamDec         go to state 35


State 49

   19 VarDec: VarDec LB INT RB •

    $default  reduce using rule 19 (VarDec)


State 50

   30 CompSt: error •
   65 Exp: error •

    SEMI      reduce using rule 65 (Exp)
    ASSIGNOP  reduce using rule 65 (Exp)
    RELOP     reduce using rule 65 (Exp)
    PLUS      reduce using rule 65 (Exp)
    MINUS     reduce using rule 30 (CompSt)
    MINUS     [reduce using rule 65 (Exp)]
    STAR      reduce using rule 65 (Exp)
    DIV       reduce using rule 65 (Exp)
    AND       reduce using rule 65 (Exp)
    OR        reduce using rule 65 (Exp)
    DOT       reduce using rule 65 (Exp)
    LB        reduce using rule 65 (Exp)
    $default  reduce using rule 30 (CompSt)


State 51

   63 Exp: INT •

    $default  reduce using rule 63 (Exp)


State 52

   64 Exp: FLOAT •

    $default  reduce using rule 64 (Exp)


State 53

   58 Exp: ID • LP Args RP
   59    | ID • LP RP
   62    | ID •

    LP  shift, and go to state 68

    $default  reduce using rule 62 (Exp)


State 54

   56 Exp: MINUS • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 70


State 55

   57 Exp: NOT • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 71


State 56

   55 Exp: LP • Exp RP

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 72


State 57

   35 Stmt: RETURN • Exp SEMI

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 73


State 58

   36 Stmt: IF • LP Exp RP Stmt
   37     | IF • LP Exp RP Stmt ELSE Stmt
   38     | IF • LP Exp RP error ELSE Stmt

    LP  shift, and go to state 74


State 59

   39 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 75


State 60

   34 Stmt: CompSt •

    $default  reduce using rule 34 (Stmt)


State 61

   29 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 76


State 62

   31 StmtList: Stmt • StmtList

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    MINUS   shift, and go to state 54
    NOT     shift, and go to state 55
    LP      shift, and go to state 56
    LC      shift, and go to state 26
    RETURN  shift, and go to state 57
    IF      shift, and go to state 58
    WHILE   shift, and go to state 59

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 77
    Stmt      go to state 62
    Exp       go to state 63


State 63

   33 Stmt: Exp • SEMI
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID

    SEMI      shift, and go to state 78
    ASSIGNOP  shift, and go to state 79
    RELOP     shift, and go to state 80
    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    STAR      shift, and go to state 83
    DIV       shift, and go to state 84
    AND       shift, and go to state 85
    OR        shift, and go to state 86
    DOT       shift, and go to state 87
    LB        shift, and go to state 88


State 64

   46 Dec: VarDec ASSIGNOP • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 89


State 65

   42 Def: Specifier DecList SEMI •

    $default  reduce using rule 42 (Def)


State 66

   44 DecList: Dec COMMA • DecList

    error  shift, and go to state 36
    ID     shift, and go to state 37

    VarDec   go to state 41
    DecList  go to state 90
    Dec      go to state 43


State 67

   24 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 24 (VarList)


State 68

   58 Exp: ID LP • Args RP
   59    | ID LP • RP

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56
    RP     shift, and go to state 91

    Exp   go to state 92
    Args  go to state 93


State 69

   65 Exp: error •

    $default  reduce using rule 65 (Exp)


State 70

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   56    | MINUS Exp •
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID

    DOT  shift, and go to state 87
    LB   shift, and go to state 88

    $default  reduce using rule 56 (Exp)


State 71

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   57    | NOT Exp •
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID

    DOT  shift, and go to state 87
    LB   shift, and go to state 88

    $default  reduce using rule 57 (Exp)


State 72

   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   55    | LP Exp • RP
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID

    ASSIGNOP  shift, and go to state 79
    RELOP     shift, and go to state 80
    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    STAR      shift, and go to state 83
    DIV       shift, and go to state 84
    AND       shift, and go to state 85
    OR        shift, and go to state 86
    DOT       shift, and go to state 87
    RP        shift, and go to state 94
    LB        shift, and go to state 88


State 73

   35 Stmt: RETURN Exp • SEMI
   47 Exp: Exp • ASSIGNOP Exp
   48    | Exp • AND Exp
   49    | Exp • OR Exp
   50    | Exp • RELOP Exp
   51    | Exp • PLUS Exp
   52    | Exp • MINUS Exp
   53    | Exp • STAR Exp
   54    | Exp • DIV Exp
   60    | Exp • LB Exp RB
   61    | Exp • DOT ID

    SEMI      shift, and go to state 95
    ASSIGNOP  shift, and go to state 79
    RELOP     shift, and go to state 80
    PLUS      shift, and go to state 81
    MINUS     shift, and go to state 82
    STAR      shift, and go to state 83
    DIV       shift, and go to state 84
    AND       shift, and go to state 85
    OR        shift, and go to state 86
    DOT       shift, and go to state 87
    LB        shift, and go to state 88


State 74

   36 Stmt: IF LP • Exp RP Stmt
   37     | IF LP • Exp RP Stmt ELSE Stmt
   38     | IF LP • Exp RP error ELSE Stmt

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 96


State 75

   39 Stmt: WHILE LP • Exp RP Stmt

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 97


State 76

   29 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 29 (CompSt)


State 77

   31 StmtList: Stmt StmtList •

    $default  reduce using rule 31 (StmtList)


State 78

   33 Stmt: Exp SEMI •

    $default  reduce using rule 33 (Stmt)


State 79

   47 Exp: Exp ASSIGNOP • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 98


State 80

   50 Exp: Exp RELOP • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 99


State 81

   51 Exp: Exp PLUS • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 100


State 82

   52 Exp: Exp MINUS • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 101


State 83

   53 Exp: Exp STAR • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 102


State 84

   54 Exp: Exp DIV • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 103


State 85

   48 Exp: Exp AND • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 104


State 86

   49 Exp: Exp OR • Exp

    error  shift, and go to state 69
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 54
    NOT    shift, and go to state 55
    LP     shift, and go to state 56

    Exp  go to state 105


State 87

   61 Exp: Exp DOT • ID

    ID  shift, and go to state 106


State 88
